별점 기능 추가

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -422,6 +422,12 @@ label {
   padding: 1px;
 }
 
+.starRating {
+  position: relative;
+  right: 520px;
+  bottom: 50px;
+}
+
 @font-face {
   font-family: "SpoqaHanSansNeo-Regular";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff")
