--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,22 @@ h6 {
 p {
   margin: 0;
 }
+
+textarea {
+  width: 100%;
+  background: rgb(250, 250, 250);
+  border: 1px solid rgb(238, 238, 238);
+  padding: 1rem;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 0.875rem;
+  background: none;
+  border: none;
+  outline: none;
+  width: 100%;
+  resize: none;
+}
+
 .container {
   width: 100%;
   display: block;
@@ -406,6 +422,7 @@ label {
   position: relative;
   top: 150px;
   left: 280px;
+  height: 1000px;
 }
 
 .inventory_container {
@@ -426,6 +443,90 @@ label {
   position: relative;
   right: 520px;
   bottom: 50px;
+  height: 50px;
+}
+
+.starDistribution {
+  width: 100%;
+  height: 260px;
+  padding: 15px;
+}
+
+.review {
+  width: 100%;
+  height: 100%;
+  background: rgb(250, 250, 250);
+  border: 1px solid rgb(238, 238, 238);
+  padding: 1rem;
+  border-radius: 4px;
+}
+
+.textarea_btn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.text_count {
+  font-size: 0.75rem;
+  color: rgb(117, 117, 117);
+}
+
+.button {
+  font-size: 0.75rem;
+  color: rgb(117, 117, 117);
+  margin-left: 650px;
+}
+
+.button:hover {
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.singleComment {
+  font-size: 0.875rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.myReview {
+  width: 100%;
+  min-height: 140px;
+  padding: 16px;
+  height: 100%;
+  word-break: break-all;
+  padding: 1rem;
+  border: 1px solid rgb(189, 189, 189);
+  border-radius: 3px;
+}
+
+.commentFooter {
+  margin-top: 2rem;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.foot {
+  display: flex;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+}
+
+.foot div {
+  color: rgb(117, 117, 117);
+  padding: 0.25rem 0.5rem;
+  font-size: 0.375rem;
+  border-radius: 4px;
+  cursor: pointer;
+  white-space: nowrap;
+  margin-top: 50px;
+}
+
+.foot div:hover {
+  background-color: rgb(238, 145, 188);
+  color: red;
 }
 
 @font-face {
